# ddd-woskshop

./: .gitignore  pyproject.toml
my_cake_shop/app/: cake_app.py
my_cake_shop/common/: dtos.py
my_cake_shop/domain/: models.py
my_cake_shop/domain/bank/: models.py
my_cake_shop/domain/cart/: models.py
my_cake_shop/domain/cart/domain_service/: competitor_prices.py
my_cake_shop/domain/domain_service/: competitor_prices.py
my_cake_shop/domain/order/: models.py
tests/domain/: test_cart.py  test_order.py
