[tool.poetry]
name = "my-cake-shop"
version = "0.1.0"
description = "My cake shop application package."
authors = ["Paola Suárez <pao.2702@gmail.com>"]

[tool.poetry.dependencies]
fastapi = {version="^0.77.1", extras=["all"]}
python = "^3.10"
py-moneyed = "^2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
